# flappy-raylib

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Flappy.sln
Flappy/: Flappy.vcxproj  Flappy.vcxproj.filters
Flappy/src/: asset_manage.cpp  asset_manage.h  bird.cpp  bird.h  id_manager.cpp  igameobject.cpp  igameobject.h  iscene.cpp  iscene.h  main.cpp  menu_scene.cpp  menu_scene.h  pipe.cpp  pipe.h  resource_dir.h  start_popup.cpp  start_popup.h
src/: bird.cpp  bird.h  id_manager.h  iscene.cpp  iscene.h  main.cpp  menu_scene.cpp  menu_scene.h  pipe.cpp  pipe.h  settings.h
